# mcp-metricool

./: notas.txt  pyproject.toml  requirements_and_config.txt  run_mcp_as_local.sh  run_mcp_as_proxy.sh  samples_claude_desktop_config.json  start_sse_server.sh
src/mcp_metricool/: mcp_proxy_client.py  mcp_sse_server.py
src/mcp_metricool/tools/: tools.py
