[project]
name = "mcp-metricool"
version = "1.1.2"
description = "This is a Model Context Protocol (MCP) server for interacting with the Metricool API. It allows AI agents to access and analyze social media metrics and campaign data from your Metricool account."
readme = "README.md"
authors = [
    { name = "Laura Esteban", email = "lauraesteban@metricool.com" },
    { name = "David Gonzalez", email = "davidgonzalez@metricool.com" },
    { name = "Vicent Martí", email = "vicentmarti@metricool.com" }
]

requires-python = ">=3.12"

dependencies = [
   # Core MCP dependencies
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",  # Añadido FastMCP
    
    # FastAPI and server dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.5",
    
    # Data handling
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    
    # JSON handling and utilities
    "orjson>=3.9.0",  # Faster JSON serialization
    
    # Async utilities
    "anyio>=4.0.0",
    
    # Optional: Si necesitas trabajar con fechas/tiempo
    "python-dateutil>=2.8.0",
    
    # Optional: Para variables de entorno
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-metricool = "mcp_metricool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"




